web/components/rename-phase-main/rename-phase-main.less
// tempcolour
@auto-rename-button: #2c5990;
@auto-rename-hover: #3f70ac;

.rename-phase-section
{
    .header-zone
    {
        padding: 0 18px;
        align-items: center;

        .inputs-zone
        {
            flex: 1;

            .base-path
            {
                flex: 2;
            }

            .auto-rename
            {
                --input-font-size: 11px;
                --button-background: @auto-rename-button;
                --button-background-hover: @auto-rename-hover;
                margin-left: 10px;
                flex: 1;
            }

            .empty
            {
                flex: 1;
            }
        }

        .rename-button-zone
        {
            flex: initial;
            justify-content: flex-end;
            margin-left: 10px;
        }
    }

    .body-zone
    {
        .rename-groups
        {
            width: 100%;
        }
    }
}

